# langmail

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  bacon.toml  cliff.toml  package-lock.json  package.json
.claude/commands/: code-review-results.md
.claude/skills/anonymize-fixture/: SKILL.md  reference.md
.github/workflows/: ci.yml  claude-code-review.yml  publish.yml  release.yml
crates/langmail/: Cargo.toml
crates/langmail-core/: Cargo.toml
crates/langmail-core/scripts/: anonymize-fixture.ts
crates/langmail-core/src/: cta.rs  html.rs  lib.rs  quotes.rs  signature.rs  types.rs
crates/langmail-core/tests/: amie_promo.rs  direct.rs  forwarded.rs  linear_login.rs  linkedin.rs  tk_message.rs  zero_width.rs
crates/langmail-core/tests/fixtures/: amie-promo.eml  direct.eml  linear-login.eml  linkedin.eml  tk-message.eml  zero-width.eml
crates/langmail-node/: Cargo.toml
crates/langmail-node/src/: lib.rs
crates/langmail-python/: Cargo.toml  README.md  pyproject.toml
crates/langmail-python/src/: lib.rs
crates/langmail-python/tests/: test_preprocess.py
crates/langmail/scripts/: anonymize-fixture.ts
crates/langmail/src/: html.rs  lib.rs  quotes.rs  signature.rs  thread.rs  types.rs
crates/langmail/tests/: amie_promo.rs  direct.rs  eventspace_booking.rs  forwarded.rs  linear_login.rs  linkedin.rs  thread_history.rs  tk_message.rs  zero_width.rs
crates/langmail/tests/fixtures/: eventspace-booking-latest-only.txt  eventspace-booking-thread-history.txt  eventspace-booking.eml  forwarded.eml  linear-login.eml  linkedin.eml  zero-width.eml
scripts/: release-prep.sh
