[workspace]
resolver = "2"
members = [
  "crates/langmail",
  "crates/langmail-node",
  "crates/langmail-python",
]

[workspace.package]
version = "0.5.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/usemarbles/langmail"
description = "Email preprocessing for LLMs"

[workspace.dependencies]
langmail = { path = "crates/langmail" }
