[package]
name = "langmail-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
mail-parser = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
regex = "1.10"
htmd = "0.5"
scraper = "0.22"
