[package]
name = "langmail-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js bindings for langmail"

[lib]
crate-type = ["cdylib"]

[dependencies]
langmail-core.workspace = true
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"
